translated index.html to French

--- a/index.html
+++ b/index.html
@@ -28,33 +28,33 @@
     <section class="showcase">
       <div class="container grid">
         <div class="showcase-text">
-          <h1>Easier Deployment</h1>
+          <h1>Déploiement Plus Facile</h1>
           <p>
-            Deploy web apps of all kinds, from large scale enterprise APIs to
-            static websites for individuals. Fill out the form to try a demo of
-            our platform
+            Déployez des applications Web de toutes sortes, des API d'entreprise
+            à grande échelle aux sites Web statiques pour les particuliers.
+            Remplissez le formulaire pour essayer une démo de notre plateforme
           </p>
-          <a href="features.html" class="btn btn-outline">Read more</a>
+          <a href="features.html" class="btn btn-outline">Lire plus</a>
         </div>
 
         <div class="showcase-form card">
-          <h2>Request a Demo</h2>
+          <h2>Demander une démo</h2>
           <form>
             <div class="form-control">
-              <input type="text" name="name" placeholder="Name" required />
+              <input type="text" name="name" placeholder="Nom" required />
             </div>
             <div class="form-control">
               <input
                 type="text"
                 name="company"
-                placeholder="Company"
+                placeholder="Entreprise"
                 required
               />
             </div>
             <div class="form-control">
               <input type="email" name="email" placeholder="Email" required />
             </div>
-            <input type="submit" value="Send" class="btn btn-primary" />
+            <input type="submit" value="Envoyer" class="btn btn-primary" />
           </form>
         </div>
       </div>
