--- a/index.html
+++ b/index.html
@@ -87,5 +87,18 @@
         </div>
       </div>
     </section>
+
+    <!-- Cli -->
+    <section class="cli">
+      <div class="container grid text-center">
+        <img src="images/cli2.png" alt="" />
+        <div class="card">
+          <h3>Easy to use, cross platform CLI</h3>
+        </div>
+        <div class="card">
+          <h3>Deploy in seconds</h3>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
