--- a/index.html
+++ b/index.html
@@ -90,8 +90,10 @@
 
     <!-- Cli -->
     <section class="cli">
-      <div class="container grid text-center">
-        <img src="images/cli2.png" alt="" />
+      <div class="container grid-3 text-center">
+        <div class="card">
+          <img src="images/cli2.png" alt="" />
+        </div>
         <div class="card">
           <h3>Easy to use, cross platform CLI</h3>
         </div>
