translated stats and cli sections

--- a/index.html
+++ b/index.html
@@ -64,25 +64,25 @@
     <section class="stats">
       <div class="container">
         <h3 class="stats-heading text-center my-1">
-          Welcome to the best platform for building applications of all types
-          with modern architecture and scaling
+          Bienvenue sur la meilleure plateforme pour créer des applications de
+          tous types avec une architecture et une mise à l'échelle modernes
         </h3>
 
         <div class="grid grid-3 text-center my-4">
           <div>
             <i class="fas fa-server fa-3x"></i>
             <h3>10,348,485</h3>
-            <p class="text-secondary">Deployments</p>
+            <p class="text-secondary">Déploiements</p>
           </div>
           <div>
             <i class="fas fa-upload fa-3x"></i>
             <h3>943 TB</h3>
-            <p class="text-secondary">Published</p>
+            <p class="text-secondary">Publié</p>
           </div>
           <div>
             <i class="fas fa-project-diagram fa-3x"></i>
             <h3>2,343,265</h3>
-            <p class="text-secondary">Projects</p>
+            <p class="text-secondary">Projets</p>
           </div>
         </div>
       </div>
@@ -95,10 +95,10 @@
           <img src="images/cli2.png" alt="" />
         </div>
         <div class="card">
-          <h3>Easy to use, cross platform CLI</h3>
+          <h3>CLI multiplateforme facile à utiliser</h3>
         </div>
         <div class="card">
-          <h3>Deploy in seconds</h3>
+          <h3>Déployez en quelques secondes</h3>
         </div>
       </div>
     </section>
