added cloud section
made more  utilities for font size and colors

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="features.html">Features</a></li>
-          <li><a href="documentaion.html">Docs</a></li>
+          <li><a href="docs.html">Docs</a></li>
         </ul>
       </div>
     </div>
@@ -90,7 +90,7 @@
 
     <!-- Cli -->
     <section class="cli">
-      <div class="container grid-3 text-center">
+      <div class="container grid-3">
         <div class="card">
           <img src="images/cli2.png" alt="" />
         </div>
@@ -102,5 +102,21 @@
         </div>
       </div>
     </section>
+
+    <!-- Cloud -->
+    <section class="cloud bg-primary my-2 py-2">
+      <div class="container grid">
+        <div class="text-center">
+          <h2 class="lg">Extreme Cloud Hosting</h2>
+          <p class="lead my-1">
+            Cloud hosting like you've never seen. Fast, efficient and scalable.
+          </p>
+          <a href="features.html" class="btn btn-dark">Lire plus</a>
+        </div>
+        <img src="images/cloud.png" alt="" />
+      </div>
+    </section>
+
+    <!-- footer -->
   </body>
 </html>
