translated cloud and languages sections

--- a/index.html
+++ b/index.html
@@ -107,9 +107,10 @@
     <section class="cloud bg-primary my-2 py-2">
       <div class="container grid">
         <div class="text-center">
-          <h2 class="lg">Extreme Cloud Hosting</h2>
+          <h2 class="mid-3">Hébergement Cloud Extreme</h2>
           <p class="lead my-1">
-            Cloud hosting like you've never seen. Fast, efficient and scalable.
+            Hébergement cloud comme vous ne l'avez jamais vu. Rapide, efficace
+            et évolutif.
           </p>
           <a href="features.html" class="btn btn-dark">Lire plus</a>
         </div>
@@ -119,7 +120,7 @@
 
     <!-- languages -->
     <section class="languages">
-      <h2 class="md text-center my-2">Supported Languages</h2>
+      <h2 class="md text-center my-2">Langues prises en charge</h2>
       <div class="container flex">
         <div class="card">
           <h4>Node.js</h4>
