--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
 
     <!-- Cli -->
     <section class="cli">
-      <div class="container grid-3">
-        <div class="card">
-          <img src="images/cli2.png" alt="" />
-        </div>
+      <div class="container grid grid-3">
+        <!-- <div class="card"> -->
+        <img src="images/cli2.png" alt="" />
+        <!-- </div> -->
         <div class="card">
           <h3>CLI multiplateforme facile à utiliser</h3>
         </div>
@@ -154,5 +154,30 @@
     </section>
 
     <!-- footer -->
+    <footer class="footer bg-dark py-5">
+      <div class="container grid grid-3">
+        <div>
+          <h1>Choutte</h1>
+          <p>Copywright &copy; 2021</p>
+        </div>
+        <nav>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="features.html">Features</a></li>
+            <li><a href="docs.html">Docs</a></li>
+          </ul>
+        </nav>
+        <div class="social-links">
+          <a href="https://github.com/Psypher1" target="_blank"
+            ><i class="fab fa-github fa-2x"></i
+          ></a>
+          <a href="https://twitter.com/Psypher1" target="_blank"
+            ><i class="fab fa-twitter fa-2x"></i
+          ></a>
+          <a href=""><i class="fab fa-facebook fa-2x"></i></a>
+          <a href=""><i class="fab fa-instagram fa-2x"></i></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
