--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <div class="container flex">
         <h1 class="logo">Choutte</h1>
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="features.html">Features</a></li>
+          <li><a href="index.html">Maison</a></li>
+          <li><a href="features.html">Caractéristiques</a></li>
           <li><a href="docs.html">Docs</a></li>
         </ul>
       </div>
@@ -162,8 +162,8 @@
         </div>
         <nav>
           <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="features.html">Features</a></li>
+            <li><a href="index.html">Maison</a></li>
+            <li><a href="features.html">Caractéristiques</a></li>
             <li><a href="docs.html">Docs</a></li>
           </ul>
         </nav>
