added content to features page
main area with cards needs to be looked at and corrected

--- a/features.html
+++ b/features.html
@@ -9,13 +9,13 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
     />
     <link rel="stylesheet" href="dist/style.css" />
-    <title>Choutte | Hosting For Everyone</title>
+    <title>Chouette | Hosting For Everyone</title>
   </head>
   <body>
     <!-- navbar -->
     <div class="navbar">
       <div class="container flex">
-        <h1 class="logo">Choutte</h1>
+        <h1 class="logo">Chouette</h1>
         <ul>
           <li><a href="index.html">Maison</a></li>
           <li><a href="features.html">Caractéristiques/a></li>
@@ -30,15 +30,75 @@
       <div class="container grid">
         <div>
           <h1 class="xl">Features</h1>
+          <p class="lead">Check out the features of Chouette that separate us from the
+            competition</p>
         </div>
+        <img src="images/server.png" alt="">
       </div>
     </section>
+
+    <!-- Sub head -->
+    <section class="features-sub-head bg-light py-3">
+        <div class="container grid">
+            <div>
+                <h1 class="md">The Chouette Platform</h1>
+                <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur neque facere natus perspiciatis odio possimus, praesentium perferendis beatae dicta? Nam, quo maxime. Exercitationem sit doloribus nemo eius quasi blanditiis possimus?</p>
+              </div>
+              <img src="images/server2.png" alt="">
+        </div>
+    </section>
+
+    <!-- main -->
+   
+    <div class="container grid grid-3">
+        <div class="card flex">
+            <i class="fas fa-server fa-3x"></i>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas nemo saepe corrupti et dolorem voluptate at, nostrum rem voluptatem ab alias quia molestiae ea, libero nihil deserunt. Molestias, eum? Necessitatibus!</p>
+        </div>
+        <div class="card flex">
+            <i class="fas fa-network-wired fa-3x"></i>
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus
+                recusandae perferendis culpa, reiciendis a itaque debitis qui vel
+                dignissimos ipsum!
+            </p>
+        </div>
+        <div class="card flex">
+            <i class="fas fa-laptop-code fa-3x"></i>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis,
+                magnam.
+            </p>
+        </div>
+        <div class="card flex">
+            <i class="fas fa-database fa-3x"></i>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, a!
+            </p>
+        </div>
+        <div class="card flex">
+            <i class="fas fa-power-off fa-3x"></i>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis,
+                magnam.
+            </p>
+        </div>
+        <div class="card flex">
+            <i class="fas fa-upload fa-3x"></i>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis,
+                magnam.
+            </p>
+        </div>
+    </div>
+</section>
+
 
     <!-- footer -->
     <footer class="footer bg-dark py-5">
       <div class="container grid grid-3">
         <div>
-          <h1>Choutte</h1>
+          <h1>Chouette</h1>
           <p>Copywright &copy; 2021</p>
         </div>
         <nav>
@@ -55,8 +115,8 @@
           <a href="https://twitter.com/Psypher1" target="_blank"
             ><i class="fab fa-twitter fa-2x"></i
           ></a>
-          <a href=""><i class="fab fa-facebook fa-2x"></i></a>
-          <a href=""><i class="fab fa-instagram fa-2x"></i></a>
+          <a href=""><i class="fab fa-linkedin fa-2x"></i></a>
+          <a href=""><i class="fab fa-wordpress fa-2x"></i></a>
         </div>
       </div>
     </footer>
