--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
     />
     <link rel="stylesheet" href="dist/style.css" />
-    <title>Choutte | Hosting For Everyone</title>
+    <title>Chouette | Hosting For Everyone</title>
   </head>
   <body>
     <!-- navbar -->
     <div class="navbar">
       <div class="container flex">
-        <h1 class="logo">Choutte</h1>
+        <h1 class="logo">Chouette</h1>
         <ul>
           <li><a href="index.html">Maison</a></li>
           <li><a href="features.html">Caractéristiques</a></li>
@@ -157,7 +157,7 @@
     <footer class="footer bg-dark py-5">
       <div class="container grid grid-3">
         <div>
-          <h1>Choutte</h1>
+          <h1>Chouette</h1>
           <p>Copywright &copy; 2021</p>
         </div>
         <nav>
@@ -174,8 +174,8 @@
           <a href="https://twitter.com/Psypher1" target="_blank"
             ><i class="fab fa-twitter fa-2x"></i
           ></a>
-          <a href=""><i class="fab fa-facebook fa-2x"></i></a>
-          <a href=""><i class="fab fa-instagram fa-2x"></i></a>
+          <a href=""><i class="fab fa-linkedin fa-2x"></i></a>
+          <a href=""><i class="fab fa-wordpress fa-2x"></i></a>
         </div>
       </div>
     </footer>
