fixed features main section

--- a/features.html
+++ b/features.html
@@ -49,8 +49,36 @@
     </section>
 
     <!-- main -->
+    <section class="features-main my-2">
+      <div class="container grid grid-3">
+        <div class="card flex">
+          <i class="fas fa-server fa-3x"></i>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis, voluptates a! Expedita quia id pariatur et? Qui veniam dicta cum maxime, itaque, sed ad ea dolor perferendis porro, at ipsum!</p>
+        </div>
+        <div class="card flex">
+          <i class="fas fa-network-wired fa-3x"></i>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis, voluptates a! Expedita quia id pariatur et? Qui veniam dicta cum maxime, itaque, sed ad ea dolor perferendis porro, at ipsum!</p>
+        </div>
+        <div class="card flex">
+          <i class="fas fa-laptop-code fa-3x"></i>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis, voluptates a! Expedita quia id pariatur et? Qui veniam dicta cum maxime, itaque, sed ad ea dolor perferendis porro, at ipsum!</p>
+        </div>
+        <div class="card flex">
+          <i class="fas fa-database fa-3x"></i>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis, voluptates a! Expedita quia id pariatur et? Qui veniam dicta cum maxime, itaque, sed ad ea dolor perferendis porro, at ipsum!</p>
+        </div>
+        <div class="card flex">
+          <i class="fas fa-power-off fa-3x"></i>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis, voluptates a! Expedita quia id pariatur et? Qui veniam dicta cum maxime, itaque, sed ad ea dolor perferendis porro, at ipsum!</p>
+        </div>
+        <div class="card flex">
+          <i class="fas fa-upload fa-3x"></i>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis, voluptates a! Expedita quia id pariatur et? Qui veniam dicta cum maxime, itaque, sed ad ea dolor perferendis porro, at ipsum!</p>
+        </div>
+      </div>
+    </section>
    
-    <div class="container grid grid-3">
+    <!-- <div class="container grid grid-3">
         <div class="card flex">
             <i class="fas fa-server fa-3x"></i>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas nemo saepe corrupti et dolorem voluptate at, nostrum rem voluptatem ab alias quia molestiae ea, libero nihil deserunt. Molestias, eum? Necessitatibus!</p>
@@ -91,7 +119,7 @@
             </p>
         </div>
     </div>
-</section>
+</section> -->
 
 
     <!-- footer -->
