translated features page

--- a/features.html
+++ b/features.html
@@ -18,7 +18,7 @@
         <h1 class="logo">Chouette</h1>
         <ul>
           <li><a href="index.html">Maison</a></li>
-          <li><a href="features.html">Caractéristiques/a></li>
+          <li><a href="features.html">Caractéristiques</a></li>
           <li><a href="docs.html">Docs</a></li>
         </ul>
       </div>
@@ -29,23 +29,30 @@
     <section class="features-head bg-primary py-3">
       <div class="container grid">
         <div>
-          <h1 class="xl">Features</h1>
-          <p class="lead">Check out the features of Chouette that separate us from the
-            competition</p>
+          <h1 class="xl">Caractéristiques</h1>
+          <p class="lead">
+            Découvrez les fonctionnalités de Chouette qui nous séparent de la
+            concurrence
+          </p>
         </div>
-        <img src="images/server.png" alt="">
+        <img src="images/server.png" alt="" />
       </div>
     </section>
 
     <!-- Sub head -->
     <section class="features-sub-head bg-light py-3">
-        <div class="container grid">
-            <div>
-                <h1 class="md">The Chouette Platform</h1>
-                <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur neque facere natus perspiciatis odio possimus, praesentium perferendis beatae dicta? Nam, quo maxime. Exercitationem sit doloribus nemo eius quasi blanditiis possimus?</p>
-              </div>
-              <img src="images/server2.png" alt="">
+      <div class="container grid">
+        <div>
+          <h1 class="md">The Chouette Platform</h1>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur
+            neque facere natus perspiciatis odio possimus, praesentium
+            perferendis beatae dicta? Nam, quo maxime. Exercitationem sit
+            doloribus nemo eius quasi blanditiis possimus?
+          </p>
         </div>
+        <img src="images/server2.png" alt="" />
+      </div>
     </section>
 
     <!-- main -->
@@ -53,75 +60,54 @@
       <div class="container grid grid-3">
         <div class="card flex">
           <i class="fas fa-server fa-3x"></i>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis, voluptates a! Expedita quia id pariatur et? Qui veniam dicta cum maxime, itaque, sed ad ea dolor perferendis porro, at ipsum!</p>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis,
+            voluptates a! Expedita quia id pariatur et? Qui veniam dicta cum
+            maxime, itaque, sed ad ea dolor perferendis porro, at ipsum!
+          </p>
         </div>
         <div class="card flex">
           <i class="fas fa-network-wired fa-3x"></i>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis, voluptates a! Expedita quia id pariatur et? Qui veniam dicta cum maxime, itaque, sed ad ea dolor perferendis porro, at ipsum!</p>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis,
+            voluptates a! Expedita quia id pariatur et? Qui veniam dicta cum
+            maxime, itaque, sed ad ea dolor perferendis porro, at ipsum!
+          </p>
         </div>
         <div class="card flex">
           <i class="fas fa-laptop-code fa-3x"></i>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis, voluptates a! Expedita quia id pariatur et? Qui veniam dicta cum maxime, itaque, sed ad ea dolor perferendis porro, at ipsum!</p>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis,
+            voluptates a! Expedita quia id pariatur et? Qui veniam dicta cum
+            maxime, itaque, sed ad ea dolor perferendis porro, at ipsum!
+          </p>
         </div>
         <div class="card flex">
           <i class="fas fa-database fa-3x"></i>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis, voluptates a! Expedita quia id pariatur et? Qui veniam dicta cum maxime, itaque, sed ad ea dolor perferendis porro, at ipsum!</p>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis,
+            voluptates a! Expedita quia id pariatur et? Qui veniam dicta cum
+            maxime, itaque, sed ad ea dolor perferendis porro, at ipsum!
+          </p>
         </div>
         <div class="card flex">
           <i class="fas fa-power-off fa-3x"></i>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis, voluptates a! Expedita quia id pariatur et? Qui veniam dicta cum maxime, itaque, sed ad ea dolor perferendis porro, at ipsum!</p>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis,
+            voluptates a! Expedita quia id pariatur et? Qui veniam dicta cum
+            maxime, itaque, sed ad ea dolor perferendis porro, at ipsum!
+          </p>
         </div>
         <div class="card flex">
           <i class="fas fa-upload fa-3x"></i>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis, voluptates a! Expedita quia id pariatur et? Qui veniam dicta cum maxime, itaque, sed ad ea dolor perferendis porro, at ipsum!</p>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis,
+            voluptates a! Expedita quia id pariatur et? Qui veniam dicta cum
+            maxime, itaque, sed ad ea dolor perferendis porro, at ipsum!
+          </p>
         </div>
       </div>
     </section>
-   
-    <!-- <div class="container grid grid-3">
-        <div class="card flex">
-            <i class="fas fa-server fa-3x"></i>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas nemo saepe corrupti et dolorem voluptate at, nostrum rem voluptatem ab alias quia molestiae ea, libero nihil deserunt. Molestias, eum? Necessitatibus!</p>
-        </div>
-        <div class="card flex">
-            <i class="fas fa-network-wired fa-3x"></i>
-            <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus
-                recusandae perferendis culpa, reiciendis a itaque debitis qui vel
-                dignissimos ipsum!
-            </p>
-        </div>
-        <div class="card flex">
-            <i class="fas fa-laptop-code fa-3x"></i>
-            <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis,
-                magnam.
-            </p>
-        </div>
-        <div class="card flex">
-            <i class="fas fa-database fa-3x"></i>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, a!
-            </p>
-        </div>
-        <div class="card flex">
-            <i class="fas fa-power-off fa-3x"></i>
-            <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis,
-                magnam.
-            </p>
-        </div>
-        <div class="card flex">
-            <i class="fas fa-upload fa-3x"></i>
-            <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis,
-                magnam.
-            </p>
-        </div>
-    </div>
-</section> -->
-
-
     <!-- footer -->
     <footer class="footer bg-dark py-5">
       <div class="container grid grid-3">
