added docs page
docs page, styled and added additonal color utilites

--- a/features.html
+++ b/features.html
@@ -43,7 +43,7 @@
     <section class="features-sub-head bg-light py-3">
       <div class="container grid">
         <div>
-          <h1 class="md">The Chouette Platform</h1>
+          <h1 class="md">La plateforme Chouette</h1>
           <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur
             neque facere natus perspiciatis odio possimus, praesentium
