--- a/docs.html
+++ b/docs.html
@@ -29,7 +29,7 @@
     <section class="docs-head bg-primary py-3">
       <div class="container grid">
         <div>
-          <h1 class="xl">Documentation</h1>
+          <h1 class="xl">Docs</h1>
           <p class="lead">Learn how to work with the Chouette platform</p>
         </div>
         <img src="images/docs.png" alt="" />
