--- a/index.html
+++ b/index.html
@@ -174,8 +174,12 @@
           <a href="https://twitter.com/Psypher1" target="_blank"
             ><i class="fab fa-twitter fa-2x"></i
           ></a>
-          <a href=""><i class="fab fa-linkedin fa-2x"></i></a>
-          <a href=""><i class="fab fa-wordpress fa-2x"></i></a>
+          <a href="https://www.linkedin.com/in/jamesmidzi/" target="_blank"
+            ><i class="fab fa-linkedin fa-2x"></i
+          ></a>
+          <a href="https://mydialectics.wordpress.com/" target="_blank"
+            ><i class="fab fa-wordpress fa-2x"></i
+          ></a>
         </div>
       </div>
     </footer>
