translated docs page

--- a/docs.html
+++ b/docs.html
@@ -30,7 +30,7 @@
       <div class="container grid">
         <div>
           <h1 class="xl">Docs</h1>
-          <p class="lead">Learn how to work with the Chouette platform</p>
+          <p class="lead">Apprenez à travailler avec la plateforme Chouette</p>
         </div>
         <img src="images/docs.png" alt="" />
       </div>
@@ -40,21 +40,21 @@
     <section class="docs-main my-4">
       <div class="container grid">
         <div class="card bg-light p-3">
-          <h3 class="my-2">Essentials</h3>
+          <h3 class="my-2">Essentiel</h3>
           <nav>
             <ul>
               <li><a class="text-primary" href="">Introduction</a></li>
-              <li><a href="">About Chouette</a></li>
+              <li><a href="">À propos Chouette</a></li>
               <li><a href="">Installation</a></li>
             </ul>
           </nav>
-          <h3 class="my-2">Deployment</h3>
+          <h3 class="my-2">Déploiement</h3>
           <nav>
             <ul>
-              <li><a href="">Setting up a container</a></li>
-              <li><a href="">Using the CLI</a></li>
-              <li><a href="">Managing resources</a></li>
-              <li><a href="">Upgrade & Downgrade</a></li>
+              <li><a href="">Mise en place d'un conteneur</a></li>
+              <li><a href="">Utilisation de la CLI </a></li>
+              <li><a href="">Gérer les ressources </a></li>
+              <li><a href="">Mettre à niveau et rétrograder </a></li>
             </ul>
           </nav>
         </div>
@@ -80,7 +80,7 @@
           </p>
           <a href="#" class="btn btn-primary">Instal CLI</a>
 
-          <h3>Requirements</h3>
+          <h3>Exigences</h3>
           <ul>
             <li>Wndows 10 | Mac OSX | Linux</li>
             <li>Node.js v12 or higher</li>
