--- a/index.html
+++ b/index.html
@@ -39,7 +39,19 @@
 
         <div class="showcase-form card">
           <h2>Demander une démo</h2>
-          <form>
+          <!-- Netlify form -->
+          <form
+            name="contact"
+            method="POST"
+            netlify-honeypot="bot-field"
+            data-netlify="true"
+          >
+            <input type="hidden" name="form-name" value="contact" />
+            <p class="hidden">
+              <label
+                >Don’t fill this out if you’re human: <input name="bot-field"
+              /></label>
+            </p>
             <div class="form-control">
               <input type="text" name="name" placeholder="Nom" required />
             </div>
@@ -56,6 +68,23 @@
             </div>
             <input type="submit" value="Envoyer" class="btn btn-primary" />
           </form>
+          <!-- <form >
+            <div class="form-control">
+              <input type="text" name="name" placeholder="Nom" required />
+            </div>
+            <div class="form-control">
+              <input
+                type="text"
+                name="company"
+                placeholder="Entreprise"
+                required
+              />
+            </div>
+            <div class="form-control">
+              <input type="email" name="email" placeholder="Email" required />
+            </div>
+            <input type="submit" value="Envoyer" class="btn btn-primary" />
+          </form> -->
         </div>
       </div>
     </section>
